	* Add F2 key shortcut for renaming filenames in the Files Tab
	* Increase max piece size to 16 MiB in create torrent dialog
	* #1475: Fix save and restore Preferences dialog size from config
	* Add search as you type to the torrent view
	* #1456: Fix no ETA showing with multiple files
	* #1560: Fix FilesTab Progress value sorting by int instead of float

=== AutoAdd ===
	* #1861: Fix AutoAdd Warning (column number is a boolean)

=== Label ===
	* #1246: Fix losing Labels upon restart

=== Execute ===
	* #1477: Fix ignore Added events from state file on startup

==== ConsoleUI ====
	* #1258: Add support for urls and magnet uris in add command

=== Deluge 1.3.2 (24 May 2011) ===
==== Core ====
	* #1527: Fix Converting unicode to unicode error in move_storage
	* #1373: Fix creating and moving non-ascii folder names in MS Windows
	* #1507: Fix temporary file race condition in core/core.py:add_torrent_url
	* Fix a bug that can occur when upgrading 1.1 config files
	* #1517: Fix isohunt urls not loading
	* Handle redirection when adding a torrent by url
	* #1614: Fix autoadd matching a directory called "torrent"
	* #1742: Fix failure in Event handler prevents further emissions

==== GtkUI ====
	* #1514: Added Indicator Applet
	* #1494: Add torrent columns Downloaded and Uploaded
	* #1308: Add torrent column Seeds/Peers ratio
	* #1646: Add torrent columns for per torrent upload and download speed limits
	* Add missing icons for Trackers filter
	* Fix inconsistancies in the text for translation
	* #1510: Fix cannot create a torrent with only non-zero tier trackers
	* #1513: Fix unhandled Twisted Error in test_listen_port
	* #690:  Fix renaming folders does not remove old empty folders
	* #1336: Fix uneeded horizontal scrollbar showing in Files & Peers Tab
	* #1508: Fix TypeError in cell_data_queue() could not convert argument to correct param type
	* #1498: Fix double slashes appearing when renaming
	* #1283: Fix consistent icons for Files tab